--- a/700.쉐도잉프로젝트/02.VOGUE_PJ/002.site/login.html
+++ b/700.쉐도잉프로젝트/02.VOGUE_PJ/002.site/login.html
@@ -130,7 +130,7 @@
                 <!-- 2-1. 카테고리 페이지 탑영역 -->
                 <header class="ctop">
                     <!-- 2-1-1. 서브타이틀 -->
-                    <h2 class="stit">Login</h2>
+                    <h2 class="stit">LogIn</h2>
                 </header>
                 <!-- 2-2. 갤러리 페이지 컨텐츠 박스 -->
                 <section class="scont">
