--- a/005.jQuery학습/002.실전연습/04_Postit/index.html
+++ b/005.jQuery학습/002.실전연습/04_Postit/index.html
@@ -77,8 +77,50 @@
                     opacity:0.7, // 이동 중 투명도
                 });
 
+                // [ 커스터마이징 요구사항 반영 ]
+                // 1. 드래그 시 포스트 잇 이미지 변경
+                
+                // (1) 드래그 시작이벤트 발생 시 이미지변경 위해
+                // 클래스 .invert넣기
+                // 드래그 시작이벤트: dragstart
+                // 제이쿼리 메서드 : on(이벤트명,함수)
+                dg.on("dragstart",function(){
+                    // 드래그되는 나 자신 -> this
+                    $(this).addClass("invert");
+                });///////////////// dragstart ///////////////////
 
-            });///// JQB //////////////
+                // (2) 드래그 끝날때 이미지변경 위해
+                // 클래스 .invert 빼기
+                // 드래그 시작이벤트: dragstop
+                // 제이쿼리 메서드 : on(이벤트명,함수)
+                dg.on("dragstop",function(){
+                    // 드래그되는 나 자신 -> this
+                    $(this).removeClass("invert");
+                });///////////////// dragstart ///////////////////
+
+                // 2. 드롭대상박스에 드롭될 때 동영상 보여주기
+                // droppable()메서드 : 드롭되는 요소처리
+                // 이벤트 대상 : .dropshow
+
+                $(".dropshow").droppable({
+                    drop:function(evt,ele){
+                        // evt - 이벤트 전달변수, ele - 드롭된요소
+                        console.log("나,빠졌다");
+
+                        // 1. drop영역의 배경이미지 변경하기
+                        // 드랍된 요소 -> ele.draggable
+                        let isrc = ele.draggable.find("img").attr("src");
+                        console.log(isrc);
+
+                        // this - 드랍박스
+                        $(this).css({
+                            backgroundImage:`url(${isrc})`
+                        })
+                    }
+                })
+
+
+            });///////////// JQB //////////////
         </script>
     </head>
 
