--- a/004.JS학습/JS비동기/05.적용연습2.html
+++ b/004.JS학습/JS비동기/05.적용연습2.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Promise 적용연습1</title>
+        <title>Promise 적용연습2 - async, await</title>
         <script>
 
             function 화면뿌려(이거){
@@ -33,6 +33,11 @@
                     4. 제이슨 맨 마지막 항목 뒤에 콤마를 남길 수 없다!(에러)
                     -> 자바스크립트에서는 마지막 콤마 허용함!
                 *****************************************************/
+
+                // 어씽크/어웨이트를 위한 어씽크 함수만들기
+                async function myAFn(){
+
+
 
                 // 1. 변수  = new Promise((성공함수)=>{변수})
                 // 프라미스 코드에 XMLHttpRequest() 객체로 제인슨 로딩함!
@@ -71,35 +76,56 @@
 
                 }); //////////////// myProm 인스턴스 /////////////////////
 
-                // 2. 프라미스변수.then((성공전달변수)=>{변수})
-                // 성공한 제이슨 로딩파일을 전달받아 활용한다!
-
-                myProm.then(success=>{ // success 성공시 전달변수
-                    console.log("전달파일찍기:",success);
-
+                // html 코드생성 함수
+                const makeHtml = obj => { // -> obj 제이슨객체
                     // html 코드 만들기
                     let hcode = `
                         <h1>우리집멍뭉이 정보:</h1>
                         <ol>
-                            <li>이름 : ${success[0]["멍뭉이이름"]}</li>
-                            <li>사는곳 : ${success[0]["멍뭉이사는곳"]}</li>
-                            <li>태생지 : ${success[0]["멍뭉이출신지역"]}</li>
-                            <li>락식 : ${success[0]["멍뭉이간식"]}</li>
+                            <li>이름 : ${obj[0]["멍뭉이이름"]}</li>
+                            <li>사는곳 : ${obj[0]["멍뭉이사는곳"]}</li>
+                            <li>태생지 : ${obj[0]["멍뭉이출신지역"]}</li>
+                            <li>락식 : ${obj[0]["멍뭉이간식"]}</li>
                         </ol>
                         <h1>우리집야옹이 정보:</h1>
                         <ol>
-                            <li>이름 : ${success[1]["야옹이이름"]}</li>
-                            <li>사는곳 : ${success[1]["야옹이사는곳"]}</li>
-                            <li>태생지 : ${success[1]["야옹이출신지역"]}</li>
-                            <li>락식 : ${success[1]["야옹이간식"]}</li>
+                            <li>이름 : ${obj[1]["야옹이이름"]}</li>
+                            <li>사는곳 : ${obj[1]["야옹이사는곳"]}</li>
+                            <li>태생지 : ${obj[1]["야옹이출신지역"]}</li>
+                            <li>락식 : ${obj[1]["야옹이간식"]}</li>
                         </ol>
                     `;
+                    return hcode;
+                }/////////////////// makeHtml ///////////////////
+
+                    // 먼저 변수에 await를 사용 프라미스 리턴값 할당
+                    let temp = await myProm;
 
                     // 화면출력하기!!!
-                    화면뿌려(hcode);
+                    화면뿌려(makeHtml(temp));
+                    
+                    /************************************************ 
+                        [ await 사용 시 주의사항! ]
+                        await에서 프라미스 인스턴스를 변수에 담지않고
+                        사용하면 Pending(보류)처리된 인스턴스가 전달되는
+                        경우가 생긴다!
 
-                });/////////////// 프라미스 then ///////////////////
+                        따라서 변수에 await 프라미스 인스턴스를 담아서 그
+                        return값을 확정한 후
+                        (변수할당이란 값을 특정 주소지에 넣고 사용할 준비를 하는 것)
 
+                        그 값으로 함수를 다시 호출하던지 후속코드작업을 하면된다!
+                        -> await를 담은 변수에 값이 할당되기 전엔
+                        그 값을 이용하는 코드도 모두 대기상태다 !!
+
+                    ************************************************/
+
+
+
+                }//////////////// myAFn 어씽크 함수 //////////////////
+
+                // 필수 최초호출 어씽크함수 !!!!!!
+                myAFn();
             });////////////////////// load /////////////////////////
 
             
