--- a/700.쉐도잉프로젝트/02.VOGUE_PJ/002.site/member.html
+++ b/700.쉐도잉프로젝트/02.VOGUE_PJ/002.site/member.html
@@ -12,11 +12,14 @@
         <link rel="shortcut icon" href="./images/icon.jpg" type="image/x-icon" />
         <!-- 아이콘CDN -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fontisto@v3.0.4/css/fontisto/fontisto.min.css" />
+        <!-- 약관동의 CSS -->
+        <link rel="stylesheet" href="./css/mem_join.css">
         <!-- 외부CSS넣기 -->
         <link rel="stylesheet" href="./css/member.css" />
         <!-- 미디어쿼리 CSS넣기 -->
         <link rel="stylesheet" href="./css/media.css" />
 
+        
         <!-- 제이쿼리 라이브러리+UI -->
         <script src="./js/jquery-3.6.1.min.js"></script>
         <script src="./js/jquery-ui.min.js"></script>
@@ -28,6 +31,7 @@
 
         
         <!-- 외부JS넣기 -->
+        <script src="./js/mem_data.js"></script>
         <script src="./js/member.js"></script>
         <!-- 링크시스템 JS -->
         <script src="./js/linksys.js"></script>
@@ -226,6 +230,8 @@
                         </ul>
                     </form>
                 </section>
+                <!-- 2-3. 동의/비동의 박스 -->
+                <section id="conf"></section>
             </main>
         </div>
 
