--- a/010.VueJS학습/001.기초연습/03.컴포넌트연습2.html
+++ b/010.VueJS학습/001.기초연습/03.컴포넌트연습2.html
@@ -182,6 +182,24 @@
                     -> 주의: 부모로부터 받은 데이터변수는 값을
                             새로 할당하여 변경할 수 없다!
 
+                3. 자식컴포넌트에서 부모의 이벤트 호출하기
+                    1) $emit으로 전달하고 (1~3)
+                        on이벤트 설정으로 받음 (4,5)
+                    2) 구현방법:
+                        (1) 자식 컴포넌트 템플릿에서 
+                            v-on: 이벤트명=자식메서드 형태로 쓴 후
+                        (2) 자식 컴포넌트 메서드구역(methods)에 이벤트에
+                            쓴 자식메서드를 만들고
+                        (3) this.$emit(부모가만든이벤트명)으로 전달!
+                        _________________
+
+                        (4) 부모 태그에서 
+                            v-on:부모가만든이벤트명=부모메서드
+                            형태로 쓴 후
+                        (5) 부모의 뷰인스턴스 메서드 구현(methods)에
+                            같은 이름의 메서드를 만들고 기능을 구현함!
+
+
 
             ******************************************************/
 
@@ -217,9 +235,10 @@
             // 2. 갤러리 리스트에 넣을 전역컴포넌트 만들기!
             // 여기가 자식입니다!!!
             Vue.component("list-comp",{
+                // v-on:click="goPapa" 로 부모이벤트 접근시작!
                 template:`
                     <div>
-                        <img v-bind:src="gsrc" alt="dress">
+                        <img v-bind:src="gsrc" v-on:click="goPapa" alt="dress">
                         <aside>
                             <h2>{{gname}}</h2>
                             <h3>{{gprice}}</h3>
@@ -228,23 +247,27 @@
                 `,
                 // 부모에서 v-bind:속성명=값으로 전달한 속성변수를
                 // props:[]/{}로 받음!
-                props:["haha"],
+                props:["haha","myseq","endlet"],
                 // props:{"haha":String},-> 데이터형 오류메시지 나옴!
                 // props:{"haha":Number}, -> 데이터형 일치
                 // 컴포넌트 내부 변수셋팅
                 data:function(){
                     return{
                         gsrc:`img_gallery/${this.haha}.jpg`,
-                        gname:`Sophia23` + this.haha,
-                        gprice:(4567*this.haha/2)+`원`
+                        gname:`Sophia23` + this.haha + this.endlet +( this.myseq%2?"🍕":"🍳"),
+                        gprice:this.insComma(Math.floor(4567*this.haha/2))+`원`
                     }
                 },
                 // 컴포넌트 내부 메서드셋팅
                 methods:{
-                    setNum(){
-                        num+=1;
-                        console.log("num:",num);
-                        return num;
+                    // 부모이벤트호출 전달하기 : $emit()메서드 사용
+                    goPaPa(){
+                        // $emit(부모가만든이벤트명)
+                        this.$emit("hull");
+                    },
+                    //정규식함수(숫자 세자리마다 콤마해주는 기능)
+                    insComma(x){
+                    return x.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ",");
                     }
                 }
             });///////////////// 뷰JS 컴포넌트 ///////////////////////
@@ -253,6 +276,13 @@
             // 여기가 부모입니다!!!
             new Vue({
                 el:".grid",
+                // 부모 뷰인스턴스 메서드구역
+                methods:{
+                    // 자식이벤트 전달 후 실행메서드!
+                    goMsg(){
+                        alert("자식인 부모에게 이벤트 전달 성공!");
+                    }
+                }
                 
             });//////////////////// Vue 인스턴스 //////////////////////
 
@@ -288,7 +318,14 @@
     <!-- 그리드 레이아웃 박스 -->
     <div class="grid">
         <!-- 여기가 부모입니다!!! -->
-        <list-comp v-for="n in 50" v-bind:key="n" v-bind:haha="n"></list-comp>
+        <list-comp v-for="(n,i) in 50" v-bind:key="n" v-bind:haha="n" v-bind:myseq="i" v-bind:endlet="'WD'" v-on:hull="goMsg"></list-comp>
+
+        <!-- 
+            v-on:hull="goMsg"
+            해석) 세성에 없는 이벤트인 hull이벤트에
+            자기자신의 메서드인 goMsg를 호출함!
+            -> 자식컴포넌트의 $emit(hull)로 연결됨!!!    
+        -->
 
         <!-- 
             v-bind:haha="n"
@@ -297,6 +334,18 @@
                 ->> 이것을 이용하여 자식컴포넌트 인스턴스에 
                 옵션으로 props:[내가만든변수]를 써서 사용할 수 있다
                 -> 이것이 부모데이터를 자식 컴포넌트에 전달하는 것
+            
+                -> 만약 props로 내부 데이터 전달하지 않으면
+            일반적으로 사용하는 속성으로 태그에 표시된다!
+            이렇게 쓰는 속성이라면 data-이름 형식을 지켜야 한다!
+            그렇지만 props로 사용하는 변병은 이럴 필요가 없다!
+
+            -> props로 사용할 속성변수는 요소의 속성이므로
+            소문자로 작성하고 호출 시 props내부에서 소문자로 셋팅한다!
+            (대문자를 섞어써도 결과적으로 소문자로 읽혀진다!)
+
+            -> 속성변수의 내용을 문자형으로 쓰려면 쌍따옴표는 홑따옴표로
+            내부에 사용하면 된다!
         -->
 
         <!-- 
