--- a/010.VueJS학습/001.기초연습/04.쇼핑몰갤러리.html
+++ b/010.VueJS학습/001.기초연습/04.쇼핑몰갤러리.html
@@ -26,7 +26,7 @@
     <!-- 그리드 레이아웃 박스 -->
     <div class="grid">
         <!-- 여기가 부모입니다!!! -->
-        <list-comp v-for="(n,i) in 50" v-bind:key="n" v-bind:haha="n" v-bind:myseq="i" v-bind:endlet="'WD'" v-on:hull="goMsg" v-on:gotkicchi="ovMsg" v-bind:data-num="n"></list-comp>
+        <list-comp v-for="(n,i) in 50" v-bind:key="n" v-bind:haha="n" v-bind:myseq="i" v-bind:endlet="'WD'" v-on:hull="goMsg" v-on:gotkimcchi="ovMsg" v-bind:data-num="n"></list-comp>
     </div>
 
 
