--- a/700.쉐도잉프로젝트/03.Pilot_PJ/002.구현소스/index.html
+++ b/700.쉐도잉프로젝트/03.Pilot_PJ/002.구현소스/index.html
@@ -7,11 +7,18 @@
     <title>파일럿 PJ</title>
     <link rel="stylesheet" href="./css/main.css">
 
+    <!-- 뷰JS 스탠드얼론 버전 가져오기! -->
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js"></script>
+
     <!-- 제이쿼리 라이브러리 -->
     <script src="./js/jquery-3.6.0.min.js"></script>
     <script src="./js/jquery-ui.min.js"></script>
+    
     <!-- 모바일 이벤트 처리 touchpunch -->
     <script src="./js/jquery-touch-punch.min.js"></script>
+    <!-- 따라다니는 버튼 플러그인 -->
+    <script src="./js/jquery.mousefollower.js"></script>
+
     <!-- 메인페이지 JS -->
     <script src="./js/main.js" type="module"></script>
 </head>
