--- a/700.쉐도잉프로젝트/03.Pilot_PJ/002.구현소스/sub.html
+++ b/700.쉐도잉프로젝트/03.Pilot_PJ/002.구현소스/sub.html
@@ -5,14 +5,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>파일럿 PJ - 카테고리 서브페이지</title>
         <!-- 스와이퍼 CSS -->
-        <link rel="stylesheet" href="./css/swiper-bundle.min.css">
+        <link rel="stylesheet" href="./css/swiper-bundle.min.css" />
         <!-- 메인 CSS -->
         <link rel="stylesheet" href="./css/sub.css" />
         <!-- 미디어쿼리 CSS -->
         <link rel="stylesheet" href="./css/media.css" />
 
-
-        
         <!-- 뷰JS 스탠드얼론 버전 가져오기! -->
         <script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js"></script>
 
@@ -46,13 +44,13 @@
                 <div class="swiper mySwiper">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
-                            <img src="./images/banmen01.png" alt="슬라이드">
+                            <img src="./images/banmen01.png" alt="슬라이드" />
                         </div>
                         <div class="swiper-slide">
-                            <img src="./images/banmen02.png" alt="슬라이드">
+                            <img src="./images/banmen02.png" alt="슬라이드" />
                         </div>
                         <div class="swiper-slide">
-                            <img src="./images/banmen03.png" alt="슬라이드">
+                            <img src="./images/banmen03.png" alt="슬라이드" />
                         </div>
                     </div>
                     <div class="swiper-button-next"></div>
@@ -61,9 +59,60 @@
                 </div>
             </section>
             <!-- 2-2. 컨텐츠1 : New Apporval-->
-            <section class="cont">
-                <h2 class="ctit">New Apporval</h2>
-
+            <section class="cont c1">
+                <!-- 2-1-1. 신상품 타이틀 -->
+                <h2 class="c1tit">New Apporval</h2>
+                <!-- 2-1-2.신상품박스 -->
+                <div class="flowbx">
+                    <!-- 리스트박스 -->
+                    <ul class="flist">
+                        <li class="m1">
+                            <a href="#">
+                                <img src="images/m1.png" alt="신상품" />
+                            </a>
+                        </li>
+                        <li class="m2">
+                            <a href="#">
+                                <img src="images/m2.png" alt="신상품" />
+                            </a>
+                        </li>
+                        <li class="m3">
+                            <a href="#">
+                                <img src="images/m3.png" alt="신상품" />
+                            </a>
+                        </li>
+                        <li class="m4">
+                            <a href="#">
+                                <img src="images/m4.png" alt="신상품" />
+                            </a>
+                        </li>
+                        <li class="m5">
+                            <a href="#">
+                                <img src="images/m5.png" alt="신상품" />
+                            </a>
+                        </li>
+                        <li class="m6">
+                            <a href="#">
+                                <img src="images/m6.png" alt="신상품" />
+                            </a>
+                        </li>
+                        <li class="m7">
+                            <a href="#">
+                                <img src="images/m7.png" alt="신상품" />
+                            </a>
+                        </li>
+                        <li class="m8">
+                            <a href="#">
+                                <img src="images/m8.png" alt="신상품" />
+                            </a>
+                        </li>
+                        <li class="m9">
+                            <a href="#">
+                                <img src="images/m9.png" alt="신상품" />
+                            </a>
+                        </li>
+                    </ul>
+                </div>
             </section>
             <!-- 2-3. 컨텐츠2 : 2023 BEACH SPECIAL WINDBREAKER -->
             <section class="cont">
@@ -74,34 +123,32 @@
                 <ul class="pgc">
                     <li class="txtc">
                         <h2>
-                            <a href="#">
-                                MEN'S<br>BEACH STYLE
-                            </a>
+                            <a href="#"> MEN'S<br />BEACH STYLE </a>
                         </h2>
                     </li>
                     <li class="imgc">
-                        <img src="./images/men01.png" alt="해변공유">
+                        <img src="./images/men01.png" alt="해변공유" />
                     </li>
                 </ul>
             </section>
             <!-- 2-5. 컨텐츠4 -->
             <section class="cont">
-            <ul class="pgc">
-                <li class="imgc">
-                    <img src="./images/style02.jpg" alt="가방공유" />
-                </li>
-                <li class="txtc">
-                    <h2 class="tm">
-                        <a href="#"> MEN'S<br />SPORT STYLE </a>
-                    </h2>
-                    <h2 class="tw">
-                        <a href="#"> MEN'S<br />LIFE STYLE </a>
-                    </h2>
-                </li>
-                <li class="imgc">
-                    <img src="./images/style03.jpg" alt="의자공유">
-                </li>
-            </ul>
+                <ul class="pgc">
+                    <li class="imgc">
+                        <img src="./images/style02.jpg" alt="가방공유" />
+                    </li>
+                    <li class="txtc">
+                        <h2 class="tm">
+                            <a href="#"> MEN'S<br />SPORT STYLE </a>
+                        </h2>
+                        <h2 class="tw">
+                            <a href="#"> MEN'S<br />LIFE STYLE </a>
+                        </h2>
+                    </li>
+                    <li class="imgc">
+                        <img src="./images/style03.jpg" alt="의자공유" />
+                    </li>
+                </ul>
             </section>
         </main>
 
