--- a/700.쉐도잉프로젝트/03.Pilot_PJ/002.구현소스/sub.html
+++ b/700.쉐도잉프로젝트/03.Pilot_PJ/002.구현소스/sub.html
@@ -25,6 +25,10 @@
         <script src="./js/swiper-bundle.min.js"></script>
         <!-- 부드러운 스크롤 -->
         <script src="./js/smoothScroll20.js"></script>
+        <!-- 패럴렉스 플러그인 JS -->
+        <script src="./js/jquery.parallax-1.1.3.js"></script>
+        <!-- 스크롤리빗 플러그인 JS -->
+        <script src="./js/jquery.scroll-reveal.js"></script>
         <!-- 메인페이지 JS -->
         <script src="./js/sub.js" type="module"></script>
     </head>
@@ -61,9 +65,9 @@
             <!-- 2-2. 컨텐츠1 : New Apporval-->
             <section class="cont c1">
                 <!-- 2-1-1. 신상품 타이틀 -->
-                <h2 class="c1tit">New Apporval</h2>
+                <h2 class="c1tit js-reveal">New Apporval</h2>
                 <!-- 2-1-2.신상품박스 -->
-                <div class="flowbx">
+                <div class="flowbx js-reveal">
                     <!-- 리스트박스 -->
                     <ul class="flist">
                         <li class="m1">
@@ -115,38 +119,38 @@
                 </div>
             </section>
             <!-- 2-3. 컨텐츠2 : 2023 BEACH SPECIAL WINDBREAKER -->
-            <section class="cont">
-                <h2 class="ctit">2023 BEACH SPECIAL WINDBREAKER</h2>
+            <section class="cont c2">
+                <h2 class="c2tit js-reveal">2023 BEACH SPECIAL WINDBREAKER</h2>
             </section>
             <!-- 2-4. 컨텐츠3 -->
-            <section class="cont">
+            <section class="cont c3">
                 <ul class="pgc">
-                    <li class="txtc">
+                    <li class="txtc js-reveal">
                         <h2>
                             <a href="#"> MEN'S<br />BEACH STYLE </a>
                         </h2>
                     </li>
                     <li class="imgc">
-                        <img src="./images/men01.png" alt="해변공유" />
+                        <img class="js-reveal" src="./images/men01.png" alt="해변공유" />
                     </li>
                 </ul>
             </section>
             <!-- 2-5. 컨텐츠4 -->
-            <section class="cont">
+            <section class="cont c4">
                 <ul class="pgc">
                     <li class="imgc">
-                        <img src="./images/style02.jpg" alt="가방공유" />
+                        <img class="js-reveal" src="./images/style02.jpg" alt="가방공유" />
                     </li>
                     <li class="txtc">
                         <h2 class="tm">
-                            <a href="#"> MEN'S<br />SPORT STYLE </a>
+                            <a class="js-reveal" href="#"> MEN'S<br />SPORT STYLE </a>
                         </h2>
                         <h2 class="tw">
-                            <a href="#"> MEN'S<br />LIFE STYLE </a>
+                            <a class="js-reveal" href="#"> MEN'S<br />LIFE STYLE </a>
                         </h2>
                     </li>
-                    <li class="imgc">
-                        <img src="./images/style03.jpg" alt="의자공유" />
+                    <li class="imgc js-reveal">
+                        <img class="js-reveal" src="./images/style03.jpg" alt="의자공유" />
                     </li>
                 </ul>
             </section>
