--- a/010.VueJS학습/001.기초연습/06.vueStore.html
+++ b/010.VueJS학습/001.기초연습/06.vueStore.html
@@ -18,7 +18,7 @@
 
     <!-- 제이쿼리 UI CDN -->
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.13.2/jquery-ui.min.js"></script>
-    <script src="./js/vuex-set.js" type="module">
+    <script src="./js/vuex-set copy.js" type="module">
     </script>
 </head>
 <body>
