--- a/700.쉐도잉프로젝트/03.Pilot_PJ/002.구현소스/sub.html
+++ b/700.쉐도잉프로젝트/03.Pilot_PJ/002.구현소스/sub.html
@@ -48,13 +48,13 @@
                 <div class="swiper mySwiper">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
-                            <img src="./images/banmen01.png" alt="슬라이드" />
+                            <img src="./images/sub/men/banner/ban1.png" alt="슬라이드" />
                         </div>
                         <div class="swiper-slide">
-                            <img src="./images/banmen02.png" alt="슬라이드" />
+                            <img src="./images/sub/men/banner/ban2.png" alt="슬라이드" />
                         </div>
                         <div class="swiper-slide">
-                            <img src="./images/banmen03.png" alt="슬라이드" />
+                            <img src="./images/sub/men/banner/ban3.png" alt="슬라이드" />
                         </div>
                     </div>
                     <div class="swiper-button-next"></div>
@@ -131,7 +131,7 @@
                         </h2>
                     </li>
                     <li class="imgc">
-                        <img class="js-reveal" src="./images/men01.png" alt="해변공유" />
+                        <img class="js-reveal" src="./images/sub/men/03.disc.png" alt="해변공유" />
                     </li>
                 </ul>
             </section>
@@ -139,7 +139,7 @@
             <section class="cont c4">
                 <ul class="pgc">
                     <li class="imgc">
-                        <img class="js-reveal" src="./images/style02.jpg" alt="가방공유" />
+                        <img class="js-reveal" src="./images/sub/men/04.disc.png" alt="가방공유" />
                     </li>
                     <li class="txtc">
                         <h2 class="tm">
@@ -150,7 +150,7 @@
                         </h2>
                     </li>
                     <li class="imgc js-reveal">
-                        <img class="js-reveal" src="./images/style03.jpg" alt="의자공유" />
+                        <img class="js-reveal" src="./images/sub/men/05.disc.png" alt="의자공유" />
                     </li>
                 </ul>
             </section>
