--- a/005.jQuery학습/003.응용구현/MaskEffect_PJ/mask.html
+++ b/005.jQuery학습/003.응용구현/MaskEffect_PJ/mask.html
@@ -16,10 +16,10 @@
 
         /* 전체부모박스 */
         .wrap {
-            position: absolute;
+            /* position: absolute;
             top: 50%;
             left: 50%;
-            transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%); */
             width: 1007px;
             height: 455px;
             outline: 1px solid red;
