--- a/700.쉐도잉프로젝트/03.Pilot_PJ/002.구현소스/sub.html
+++ b/700.쉐도잉프로젝트/03.Pilot_PJ/002.구현소스/sub.html
@@ -14,6 +14,9 @@
         <!-- 뷰JS 스탠드얼론 버전 가져오기! -->
         <script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js"></script>
 
+        <!-- 뷰JS vuex CDN -->
+        <script src="https://unpkg.com/vuex@3.0.0"></script>
+
         <!-- 제이쿼리 라이브러리 -->
         <script src="./js/jquery-3.6.0.min.js"></script>
         <script src="./js/jquery-ui.min.js"></script>
@@ -43,27 +46,10 @@
         <!-- 2. 컨텐츠영역 -->
         <main id="cont">
             <!-- 2-1. 배너영역 -->
-            <section id="ban" class="page">
-                <!-- Swiper -->
-                <div class="swiper mySwiper">
-                    <div class="swiper-wrapper">
-                        <div class="swiper-slide">
-                            <img src="./images/sub/men/banner/ban1.png" alt="슬라이드" />
-                        </div>
-                        <div class="swiper-slide">
-                            <img src="./images/sub/men/banner/ban2.png" alt="슬라이드" />
-                        </div>
-                        <div class="swiper-slide">
-                            <img src="./images/sub/men/banner/ban3.png" alt="슬라이드" />
-                        </div>
-                    </div>
-                    <div class="swiper-button-next"></div>
-                    <div class="swiper-button-prev"></div>
-                    <div class="swiper-pagination"></div>
-                </div>
-            </section>
+            <ban-comp></ban-comp>
+
             <!-- 2-2. 컨텐츠1 : New Apporval-->
-            <section class="cont c1">
+            <section class="cont c1" id="c1">
                 <!-- 2-1-1. 신상품 타이틀 -->
                 <h2 class="c1tit js-reveal">New Apporval</h2>
                 <!-- 2-1-2.신상품박스 -->
@@ -119,11 +105,11 @@
                 </div>
             </section>
             <!-- 2-3. 컨텐츠2 : 2023 BEACH SPECIAL WINDBREAKER -->
-            <section class="cont c2">
+            <section class="cont c2" id="c2">
                 <h2 class="c2tit js-reveal">2023 BEACH SPECIAL WINDBREAKER</h2>
             </section>
             <!-- 2-4. 컨텐츠3 -->
-            <section class="cont c3">
+            <section class="cont c3" id="c3">
                 <ul class="pgc">
                     <li class="txtc js-reveal">
                         <h2>
@@ -136,7 +122,7 @@
                 </ul>
             </section>
             <!-- 2-5. 컨텐츠4 -->
-            <section class="cont c4">
+            <section class="cont c4" id="c4">
                 <ul class="pgc">
                     <li class="imgc">
                         <img class="js-reveal" src="./images/sub/men/04.disc.png" alt="가방공유" />
