--- a/700.쉐도잉프로젝트/03.Pilot_PJ/002.구현소스/sub.html
+++ b/700.쉐도잉프로젝트/03.Pilot_PJ/002.구현소스/sub.html
@@ -51,9 +51,7 @@
             <!-- 2-2. 컨텐츠1 : New Apporval-->
             <cont1-comp></cont1-comp>
             <!-- 2-3. 컨텐츠2 : 2023 BEACH SPECIAL WINDBREAKER -->
-            <section class="cont c2" id="c2">
-                <h2 class="c2tit js-reveal">2023 BEACH SPECIAL WINDBREAKER</h2>
-            </section>
+            <cont2-comp></cont2-comp>
             <!-- 2-4. 컨텐츠3 -->
             <section class="cont c3" id="c3">
                 <ul class="pgc">
