--- a/700.쉐도잉프로젝트/03.Pilot_PJ/002.구현소스/index.html
+++ b/700.쉐도잉프로젝트/03.Pilot_PJ/002.구현소스/index.html
@@ -111,7 +111,7 @@
             </li>
             <li class="txtc">
                 <h2>
-                    <a href="men.html">
+                    <a href="sub.html?cat=남성">
                         MEN'S<br>ESSENTIALS
                     </a>
                 </h2>
@@ -123,7 +123,7 @@
         <ul class="pgc">
             <li class="txtc">
                 <h2>
-                    <a href="#">
+                    <a href="sub.html?cat=여성">
                         WOMEN'S<br>ESSENTIALS
                     </a>
                 </h2>
@@ -141,12 +141,12 @@
             </li>
             <li class="txtc">
                 <h2 class="tm">
-                    <a href="#">
+                    <a href="sub.html?cat=스타일">
                         MEN'S<br>STYLE
                     </a>
                 </h2>
                 <h2 class="tw">
-                    <a href="#">
+                    <a href="sub.html?cat=스타일">
                         WOMEN'S<br>STYLE
                     </a>
                 </h2>
