--- a/700.쉐도잉프로젝트/03.Pilot_PJ/002.구현소스/sub.html
+++ b/700.쉐도잉프로젝트/03.Pilot_PJ/002.구현소스/sub.html
@@ -53,37 +53,9 @@
             <!-- 2-3. 컨텐츠2 : 2023 BEACH SPECIAL WINDBREAKER -->
             <cont2-comp></cont2-comp>
             <!-- 2-4. 컨텐츠3 -->
-            <section class="cont c3" id="c3">
-                <ul class="pgc">
-                    <li class="txtc js-reveal">
-                        <h2>
-                            <a href="#"> MEN'S<br />BEACH STYLE </a>
-                        </h2>
-                    </li>
-                    <li class="imgc">
-                        <img class="js-reveal" src="./images/sub/men/03.disc.png" alt="해변공유" />
-                    </li>
-                </ul>
-            </section>
+            <cont3-comp></cont3-comp>
             <!-- 2-5. 컨텐츠4 -->
-            <section class="cont c4" id="c4">
-                <ul class="pgc">
-                    <li class="imgc">
-                        <img class="js-reveal" src="./images/sub/men/04.disc.png" alt="가방공유" />
-                    </li>
-                    <li class="txtc">
-                        <h2 class="tm">
-                            <a class="js-reveal" href="#"> MEN'S<br />SPORT STYLE </a>
-                        </h2>
-                        <h2 class="tw">
-                            <a class="js-reveal" href="#"> MEN'S<br />LIFE STYLE </a>
-                        </h2>
-                    </li>
-                    <li class="imgc js-reveal">
-                        <img class="js-reveal" src="./images/sub/men/05.disc.png" alt="의자공유" />
-                    </li>
-                </ul>
-            </section>
+            <cont4-comp></cont4-comp>
         </main>
 
         <footer id="info" class="page">
