--- a/700.쉐도잉프로젝트/03.Pilot_PJ/002.구현소스/sub.html
+++ b/700.쉐도잉프로젝트/03.Pilot_PJ/002.구현소스/sub.html
@@ -50,6 +50,9 @@
 
             <!-- 2-2. 컨텐츠1 : New Apporval-->
             <cont1-comp></cont1-comp>
+            <!-- 상세보기 컴포넌트 -->
+            <detail-comp></detail-comp>
+
             <!-- 2-3. 컨텐츠2 : 2023 BEACH SPECIAL WINDBREAKER -->
             <cont2-comp></cont2-comp>
             <!-- 2-4. 컨텐츠3 -->
