--- a/014.React학습/react-cdn/03.JSX.html
+++ b/014.React학습/react-cdn/03.JSX.html
@@ -30,7 +30,7 @@
     </head>
     <body>
         <div id="root">
-            <div>1</d4iv>
+            <div>1</div>
             <div>2</div>
             <div>3</div>
             <div>4</div>
