--- a/014.React학습/react-cdn/index.html
+++ b/014.React학습/react-cdn/index.html
@@ -56,7 +56,11 @@
             ifr.src = ele.href;
             listPrt.forEach(ele=>ele.classList.remove("on"));
             ele.parentElement.classList.add("on");
-            return false;
+            return false; 
+            // a요소 기본이동막기를 return false로 대신함
+            // 함수를 실행 후 돌아갈때 false를 리턴함으로
+            // 부가적인 이동기능을 멈추게한다!
+            // 다른 방법으로는 event.preventDefault()도 있음
           }; ///////// click /////////
         }); //////// forEach ////////
       }); /////////////// load /////////////////
