--- a/014.React학습/react-cdn/04.컴포넌트.html
+++ b/014.React학습/react-cdn/04.컴포넌트.html
@@ -13,9 +13,16 @@
         <script
             src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"
         ></script>
-        <!-- 3.리액트 바벨 라이브러리 -->
+        <!-- 3.리액트 바벨 라이브러리 
+        브라우저 호환성 보완해주는 역할 (ES6->ES5변환)-->
         <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
-        <script src="./js/04.컴포넌트.jsx" type="text/babel"></script>
+
+        <script src="./js/Avengers.jsx"  data-plugins="transform-es2015-modules-umd" type="text/babel"></script>
+
+        <!-- 4. 리액트 컴포넌트 JSX호출 -->
+        <script src="./js/04.컴포넌트.jsx" data-plugins="transform-es2015-modules-umd" type="text/babel"></script>
+        <!-- -> 상단에 모듈화한 JS를 먼저 불러준다! -->
+
         
     </head>
     <body>
