--- a/014.React학습/react-cdn/05.Props.html
+++ b/014.React학습/react-cdn/05.Props.html
@@ -20,7 +20,7 @@
 
         <!-- 리액트 Props JSX 호출 -->
         <script
-            src="./js/05.Props.jsx"
+            src="./js/05.Props copy.jsx"
             type="text/babel"
         ></script>
     </head>
