--- a/005.jQuery학습/003.응용구현/jq_board/list.html
+++ b/005.jQuery학습/003.응용구현/jq_board/list.html
@@ -50,8 +50,8 @@
         <tfoot>
             <tr>
                 <td colspan="5" class="paging">
-                    <!--PHP에서 페이징을 구성하여 표시한다!-->
-                
+                    <!-- 페이징번호 위치 -->
+                    
 
                 </td>
             </tr>
