--- a/004.JS학습/JS4-4.배열의정렬.html
+++ b/004.JS학습/JS4-4.배열의정렬.html
@@ -149,7 +149,37 @@
             2. 정렬한 후 변경된 배열의 값을 화면에 다시 넣어준다!
             (리액트에서는 hook변수처리 하므로 배열만 변경하면 바로 반영된다!)
 
+            *********************************************
 
+            [ 배열의 검색 : find() / filter() / indexOf() ]
+            
+            1. find() 메서드
+            (1) 검색 후 첫번째 일치값 하나만을 리턴
+            (2) 결과가 없으면 undefined 리턴 (if문에서 false처리)
+            (3) 콜백함수구성 : function(val,idx,obj){}
+                1) val : 처리 중 배열의 값
+                2) idx : 처리 중 배열의 순번
+                3) obj : 처리 중 배열전체
+            (4) 리턴데이터 : 배열의 값 하나(값의 데이터형)
+            (5) 활용케이스 : 아이디검사 결과 리턴
+
+            2. filter() 메서드
+            (1) 검색 후 모든 일치값을 리턴
+            (2) 결과가 없으면 undefined 리턴 (if문에서 false처리)
+            (3) 콜백함수구성 : function(val,idx,obj){}
+                1) val : 처리 중 배열의 값
+                2) idx : 처리 중 배열의 순번
+                3) obj : 처리 중 배열전체
+            (4) 리턴데이터 : 배열형데이터(하나여도 배열값으로 넘어옴!)
+            (5) 활용케이스 : 검색리스트 결과 리턴
+
+            3. LIKE 검색방법 : 값의 일부만 넣어도 검색되는 방법
+            -> indexOf(값)을 사용함!
+            결과값으로 문자열의 위치순번을 리턴하는데
+            만약 없으면 -1을 리턴하므로 이것을 이용하여 조건문에 -1이 아닌
+            경우가 검색결과가 있는 경우가 됨!
+            예)
+            if(문자열.indexOf(검색문자열)!==-1){결과리턴}
 
 
         ****************************************************/
@@ -264,7 +294,7 @@
                 ]; /////////////// list1 /////////////
 
                     // 2. html넣기 : .showList3 -> 함수화하기
-                    const upCode = (obj)=>{ // obj 배열데이터
+                    const upCode = (obj, ele)=>{ // obj 배열데이터, ele
                         // (1) 데이터 코드 만들기
                         const htc = obj.map((v)=>`
                             <tr>
@@ -275,7 +305,7 @@
                         `);
 
                         // (2) 요소에 데이터코드 넣기
-                        document.querySelector(".showList3")
+                        document.querySelector(ele)
                         .innerHTML = `
                             <table>
                                 <thead>
@@ -293,7 +323,7 @@
                     }//// upCode ////
 
                     // upCode최초호출
-                    upCode(list1)
+                    upCode(list1,".showList3")
 
 
                     // 3. 정렬변경 선택박스 이벤트 함수 만들기
@@ -326,6 +356,94 @@
                         // 4. html반영하기
                         upCode(list1)
                     }//// change : sel3 ////
+
+
+
+                // [ 4. 객체데이터 검색 후 배열의 정렬 ] //
+                // 1. 데이터
+                const list2 = [
+                    {
+                        idx: 15,
+                        tit: "당근마켓에 가자",
+                        cont: "당근마켓이 정말로 싸고 좋다구~!",
+                    },
+                    {
+                        idx: 74,
+                        tit: "점심에 뭐먹지?",
+                        cont: "오스틴님 생일 서포트 안내",
+                    },
+                    {
+                        idx: 18,
+                        tit: "직돌이는 쉬고싶다~!",
+                        cont: "활동정지에 대한 파생글 무통보 삭제 및 경고",
+                    },
+                    {
+                        idx: 104,
+                        tit: "올해는 다른 회사로 이직한다!",
+                        cont: "⚜️갈라콘 서포트에 많은 참여 부탁드립니다!",
+                    },
+                ]; /////////////// list2 /////////////
+
+                // 2. 샘플 버튼 클릭하여 데이터 확인
+                document.querySelector(".sample").onclick =()=>{
+                    // 1. find() 메서드 확인하기 : 데이터 정확히 일치해야함!
+                    let res1 = list2.find(v=>{
+                        if(v.tit=="당근마켓에 가자") return true
+                    })
+                    console.log("검색어 : '당근마켓에 가자'\n결과",res1)
+
+                    // 2. find() 메서드 LIKE 검색하기 : 데이터일부로 찾음
+                    // indexOf() 결과가 -1이 아니면 내용이 있음으로 처리!
+                    // find()의 특징상 처음만나는 데이터 하나만 리턴함!
+                    let res2 = list2.find(v=>{
+                        if(v.tit.indexOf("다")!=-1) return true
+                    })
+                    console.log("검색어 : '당근마켓에 가자'\n결과",res2 )
+
+                    // 3. filter() 메서드로 LIKE검색하기
+                    // filter()는 해당결과를 배열로 리턴함(여러개수집!)
+                    let res3 = list2.filter(v=>{
+                        if(v.tit.indexOf("당근")!=-1) return true
+                    })
+                    console.log("검색어 : '당근마켓에 가자'\n결과",res3 )
+
+
+                };//// click ////
+
+
+                // 3. 최초데이터 구성하여 화면에 넣기 : upCode함수사용
+                upCode(list2,".showList4")
+
+                // 4. 검색버튼 클릭 시 검색결과 만들어 화면에 출력하기
+                // 대상: .sbtn
+                document.querySelector(".sbtn").onclick = ()=>{
+                    // 1. 검색어 가져오기 : #stxt
+                    let stxt = document.querySelector("#stxt").value
+                    if(stxt.trim()==""){
+                        alert("검색어를 넣어주세요!")
+                        return; // 나가
+                    }//// if ////
+                    console.log("검색어 : ", stxt);
+
+                    // 2. 검색조건 가져오기 : .cta4
+                    let cta = document.querySelector(".cta4").value;
+                    console.log("검색기준:",cta)
+
+                    // 3. 다중값 리턴 LIKE검색
+                    // filter() + indexOf() 사용!!
+                    let res = list2.filter(v=>{
+                        // indexOf()는 문자열만 가능하므로
+                        // String()으로 문자혈변환해야함!
+                        if(String(v[cta]).indexOf(stxt)!==-1) return true
+                    })//// filter ////
+
+                    console.log("검색결과:",res)
+
+                    // 4. 출력하기 : upCode
+                    upCode(res,".showList4")
+                    
+                }; //// click : .sbtn ////
+
 
             }); // load //
         </script>
